revert to old imgs; add links to DITAP page

--- a/pages/services.html
+++ b/pages/services.html
@@ -42,7 +42,8 @@ permalink: /services/
     <div class="minor-service-areas-row">
       <div class="minor-service-area-col">
         <p>
-          Also, check out our <a class="text" href="/services/microconsulting/">Microconsulting Services</a>.
+          Also, check out our <a class="text" href="/services/microconsulting/">Microconsulting Services</a>
+          and <a class="text" href="/services/ditap/">DITAP Training</a>.
         </p>
       </div>
     </div>
