--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -6,56 +6,51 @@ permalink: /hire-us/
 
 {% include page_header.html
   header_title = 'Let&apos;s Deliver Something Great'
+  header_class = 'page-header-2'
 %}
 
 <div class="hire-us">
+  <p>
+    <strong>We'd love to work with you on turning your most bold idea or complex problem
+    into a public success story.</strong> Please describe what you're looking
+    to do, and we'll follow up in one business day. If you prefer, you can email
+    us at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
+  </p>
 
-  <div class="hire-row">
-    <p>
-      <strong>We'd love to work with you on turning your most bold idea or complex problem
-      into a public success story.</strong> Please describe what you're looking
-      to do, and we'll follow up in one business day. If you prefer, you can email
-      us at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
-    </p>
+  <div class="hire-us-form">
+    <form accept-charset="UTF-8" action="https://formkeep.com/f/4309c7290974" method="POST">
+      <input type="hidden" name="utf8" value="✓">
+
+      <div class="form-group">
+        <label class="required" for="name-input">Name</label>
+        <input id="name-input" class="form-control" type="text" placeholder="Julie Styles" name="name" autocomplete="name" required>
+      </div>
+
+      <div class="form-group">
+        <label class="required" for="org-input">Organization</label>
+        <input id="org-input" class="form-control" type="text" placeholder="Department of Great Technology" name="org" autocomplete="org" required>
+      </div>
+
+      <div class="form-group">
+        <label class="required" for="email-input">Email</label>
+        <input id="email-input" class="form-control" type="email" placeholder="julie@dgt.gov" name="email" autocomplete="email" required>
+      </div>
+
+      <div class="form-group">
+        <label for="tel-input">Telephone</label>
+        <input id="tel-input" class="form-control" type="tel" placeholder="555-555-5555" name="phone" autocomplete="tel">
+      </div>
+
+      <div class="form-group">
+        <label class="required" for="help-input">How can we be of service?</label>
+        <textarea id="help-input" class="form-control" rows="3" placeholder="I need help modernizing an old system..." name="need" required></textarea>
+      </div>
+
+      <div class="form-group text-center">
+        <button class="btn-submit-outline">Submit</button>
+      </div>
+    </form>
   </div>
-
-  <div class="hire-row">
-    <div class="hire-contact-col">
-      <form accept-charset="UTF-8" action="https://formkeep.com/f/4309c7290974" method="POST">
-        <input type="hidden" name="utf8" value="✓">
-
-        <div class="form-group">
-          <label class="required" for="name-input">Name</label>
-          <input id="name-input" class="form-control" type="text" placeholder="Julie Styles" name="name" autocomplete="name" required>
-        </div>
-
-        <div class="form-group">
-          <label class="required" for="org-input">Organization</label>
-          <input id="org-input" class="form-control" type="text" placeholder="Department of Great Technology" name="org" autocomplete="org" required>
-        </div>
-
-        <div class="form-group">
-          <label class="required" for="email-input">Email</label>
-          <input id="email-input" class="form-control" type="email" placeholder="julie@dgt.gov" name="email" autocomplete="email" required>
-        </div>
-
-        <div class="form-group">
-          <label for="tel-input">Telephone</label>
-          <input id="tel-input" class="form-control" type="tel" placeholder="555-555-5555" name="phone" autocomplete="tel">
-        </div>
-
-        <div class="form-group">
-          <label class="required" for="help-input">How can we be of service?</label>
-          <textarea id="help-input" class="form-control" rows="3" placeholder="I need help modernizing an old system..." name="need" required></textarea>
-        </div>
-
-        <div class="form-group text-center">
-          <button class="btn-submit-outline">Submit</button>
-        </div>
-      </form>
-    </div>
-  </div>
-
 </div>
 
 {% include testimonial_cta.html %}
