--- a/_service_areas/ditap-apply.html
+++ b/_service_areas/ditap-apply.html
@@ -11,12 +11,11 @@ permalink: /services/ditap/apply/
 <div class="ditap-apply">
   <p>
     <strong>You're one step closer to mastering the art of digital acquisition!</strong>
-    If you're ready to apply, please complete the form below. Our team will review your
-    application and follow up within 1&ndash;2 business days to ask you a few
-    questions. We want you to have the best experience possible, so it's important
-    to determine whether you're a good fit for the program at this time. Once
-    you're approved, we'll then walk you through the process of formally enrolling,
-    including tuition payment.
+    Once we receive your application, our team will review it and follow up within 1&ndash;2
+    business days to ask you a few questions. We want you to have the best learning
+    experience possible, so it's important to determine whether you're a good fit for
+    the program at this time. Once you're approved, we'll then walk you through the
+    process of formally enrolling, including tuition payment.
   </p>
 
   <div class="ditap-apply-form">
