--- a/thankyou.html
+++ b/thankyou.html
@@ -6,10 +6,10 @@ skip_index: true
 ---
 
 {% capture header_content %}
-  We received your submission, and will be in touch shortly.
+  <p>We received your submission, and will be in touch shortly.
   In the meantime, feel free to check out <a href="/blog/">our blog</a>,
   or follow us on <a href="{{site.twitter_url}}">Twitter</a> or
-  <a href="{{site.linkedin_url}}">LinkedIn</a>.
+  <a href="{{site.linkedin_url}}">LinkedIn</a>.</p>
 {% endcapture %}
 
 {% include page_header.html
