fix link styles

--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -9,7 +9,7 @@ permalink: /hire-us/
   header_class = 'page-header-2'
 %}
 
-<div class="hire-us">
+<div class="hire-us text">
   <p>
     <strong>We'd love to work with you on turning your most bold idea or complex problem
     into a public success story.</strong> Please describe what you're looking
