--- a/_service_areas/ditap-apply.html
+++ b/_service_areas/ditap-apply.html
@@ -45,8 +45,9 @@ permalink: /services/ditap/apply/
       <div class="form-group">
         <label class="required" for="date-input">What course date would you like to take?</label>
         <select class="form-control" id="date-input" name="date" required>
-          <!-- <option value>- Select -</option> -->
+          <option value>- Select -</option>
           <option>November 6, 2019 to May 7, 2020</option>
+          <option>March 4, 2020 to August 27, 2020</option>
         </select>
       </div>
 
