Add url parameter for class date

--- a/_service_areas/ditap-apply.html
+++ b/_service_areas/ditap-apply.html
@@ -46,8 +46,8 @@ permalink: /services/ditap/apply/
         <label class="required" for="date-input">What course date would you like to take?</label>
         <select class="form-control" id="date-input" name="date" required>
           <option value>- Select -</option>
-          <option>November 6, 2019 to May 7, 2020</option>
-          <option>March 4, 2020 to August 27, 2020</option>
+          <option value="1">November 6, 2019 to May 7, 2020</option>
+          <option value="2">March 4, 2020 to August 27, 2020</option>
         </select>
       </div>
 
