--- a/_projects/va_api_scorecard_mvp.html
+++ b/_projects/va_api_scorecard_mvp.html
@@ -3,7 +3,7 @@ layout: default
 title_tag: Veterans Affairs
 title: Creating a tool for governing APIs
 permalink: /work/va-api-scorecard-mvp/
-image: /img/projects/va_api_scorecard_mvp/api-scorecard.png
+image: /img/projects/va_api_scorecard_mvp/api-scorecard.svg
 image_description: Illustration of a scorecard for APIs.
 feature_image: /img/projects/va_api_scorecard_mvp/va-api-scorecard-screenshot.png
 feature_image_description: Product screenshot of the VA API Scorecard.
