--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -3,7 +3,7 @@ layout: default
 title_tag: Agile Delivery Services Marketplace
 title: Streamlining how agencies procure software
 permalink: /work/agile-delivery-services-marketplace/
-image: /img/projects/agile_delivery_services_marketplace/agile-delivery-services-marketplace.png
+image: /img/projects/agile_delivery_services_marketplace/agile-delivery-services-marketplace.svg
 image_description: Illustration representing a marketplace of agile vendors.
 feature_image:
 feature_image_description:
