Add shadow to project image

--- a/_projects/va_api_scorecard_mvp.html
+++ b/_projects/va_api_scorecard_mvp.html
@@ -7,6 +7,7 @@ image: /img/projects/va_api_scorecard_mvp/api-scorecard.svg
 image_description: Illustration of a scorecard for APIs.
 feature_image: /img/projects/va_api_scorecard_mvp/va-api-scorecard-screenshot.png
 feature_image_description: Product screenshot of the VA API Scorecard.
+feature_image_shadow: true
 order: 40
 display: true
 tags: [microconsulting, api microconsulting, victor zapanta, nick bristow, kin lane, robert read, chris cairns]
