Add new hero image

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@ title: Home
 
   <section class="landing-jumbotron">
     <div class="landing-jumbotron-content">
-      <h1 class="hidden-md-up">We make government work in a digital world</h1>
+      <h1 class="hidden-sm-up">We make government work in a digital world</h1>
 
-      <h1 class="hidden-sm-down">We make government <br> work in a digital world</h1>
+      <h1 class="hidden-xs-down">We make government <br> work in a digital world</h1>
 
-      <p class="hidden-md-up">
+      <p class="hidden-sm-up">
         Skylight is a <em>HUBZone</em> digital consultancy, using design, technology,
         and procurement to enable government success in the digital age.
       </p>
 
-      <p class="hidden-sm-down">
+      <p class="hidden-xs-down">
         Skylight is a <em>HUBZone</em> digital consultancy, using design, technology,
         <br> and procurement to enable government success in the digital age.
       </p>
