add drop shadow

--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -7,6 +7,7 @@ image: /img/projects/talkto/talkto.png
 image_description: The logo of TalkTo.
 feature_image: /img/projects/talkto/talkto-demo-page.png
 feature_image_description: Product screenshot of a demo page of the messaging functionality.
+feature_image_shadow: true
 order: 30
 display: true
 tags: [digital services delivery, sean johnson]
