--- a/_projects/ssa_agile_microsprints.html
+++ b/_projects/ssa_agile_microsprints.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: Social Security Administration
 title: Accelerating agile adoption
 permalink: /work/ssa-agile-microsprints/
-image: /img/projects/ssa_agile_microsprints/microsprint.png
-image_description: Illustration of an agile sprint cycle on various sticky notes.
+image: /img/projects/ssa_agile_microsprints/agile-board.svg
+image_description: Illustration of two people interacting with cards on an agile board.
 feature_image:
 feature_image_description:
 order: 100
