--- a/_projects/recreation_info_database_api.html
+++ b/_projects/recreation_info_database_api.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: U.S. Department of Agriculture
 title: Advocating for API-accessible recreation data
 permalink: /work/recreation-information-database-api/
-image: /img/projects/recreation-information-database-api/recreation-api.png
-image_description: Illustration of a camping tent enclosed within API computing symbols.
+image: /img/projects/recreation-information-database-api/recreation-api.svg
+image_description: Illustration of two people camping with one of them using a mobile device.
 feature_image:
 feature_image_description:
 order: 170
