--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 
   <section class="landing-jumbotron">
     <div class="landing-jumbotron-content">
-<!--       <h1 class="hidden-sm-up">We make government work in a digital world</h1>
+      <h1 class="hidden-sm-up">We make government work in a digital world</h1>
 
       <h1 class="hidden-xs-down">We make government <br> work in a digital world</h1>
 
@@ -24,7 +24,7 @@ title: Home
       <a class="btn btn-warning btn-lg text-dark" href="/hire-us/" role="button">
         <span class="font-bold">Let's talk</span>
         <i class="fa fa-arrow-right" aria-hidden="true"></i>
-      </a> -->
+      </a>
     </div>
   </section>
 
