new work illustration

--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: Transportation Security Administration
 title: Jumpstarting cloud adoption
 permalink: /work/tsa-cloud-adoption/
-image: /img/projects/tsa_cloud_adoption/cloud-jumpstarter.png
-image_description: Illustration showing a car jumpstarter being used on a cloud.
+image: /img/projects/tsa_cloud_adoption/cloud-jumpstarter.svg
+image_description: Illustration of an engineer using jumper cables on a cloud.
 feature_image:
 feature_image_description:
 order: 70
