--- a/_projects/va_api_scorecard_mvp.html
+++ b/_projects/va_api_scorecard_mvp.html
@@ -21,7 +21,7 @@ project_members:
 technologies:
   - HTML / CSS / Sass
   - JavaScript
-  - U.S. Web Design Standards
+  - U.S. Web Design System
   - Balsamiq
   - YAML
   - GitHub Pages
