--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -18,7 +18,7 @@ project_members:
   - aera-hoffman
 technologies:
   - Ruby / Rails
-  - U.S. Web Design Standards
+  - U.S. Web Design System
   - HTML / CSS / Sass
   - JavaScript
   - CircleCI
