--- a/_projects/va_api_landscape_analysis.html
+++ b/_projects/va_api_landscape_analysis.html
@@ -71,7 +71,7 @@ source_code_url: https://github.com/skylight-hq/va-api-landscape
     </li>
 
     <li>
-      Conducting user research with Veterans and their supporters to learn more about
+      Conducting user research with veterans and their supporters to learn more about
       what types of data resources would be most valuable to them if made more available
       and accessible on the web, mobile devices, and other platforms
     </li>
