--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -10,7 +10,7 @@ feature_image_description:
 order: 5
 display: true
 tags: [digital services delivery, becca bartola, lesley evans, tom black, aera hoffman]
-excerpt: A knowledge management platform for improving how the Veterans Affairs delivers healthcare to Veterans through the dissemination of promising clinical and administrative practices.
+excerpt: A knowledge management platform for improving how the Veterans Affairs delivers healthcare to veterans through the dissemination of promising clinical and administrative practices.
 project_members:
   - becca-bartola
   - lesley-evans
@@ -59,7 +59,7 @@ source_code_url:
     centers and nearly 1,400 community-based outpatient clinics, community
     living centers, Vet centers, and domiciliary. Together these healthcare
     facilities, and the more than 53,000 licensed healthcare practitioners,
-    provide comprehensive care to more than 8.3 million Veterans each year.
+    provide comprehensive care to more than 8.3 million veterans each year.
   </p>
 
   <p>
