--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -51,7 +51,7 @@ source_code_url:
     Recognizing this trend, the VA realized there might be an opportunity to further
     improve the mobile experience of VA.gov by offering a flagship mobile app. They
     sought guidance on how best to employ a unified, multi-channel, cross-platform
-    approach for delivering the most common services used by Veterans.
+    approach for delivering the most common services used by veterans.
   </p>
 {% endcapture %}
 
@@ -80,7 +80,7 @@ source_code_url:
     </li>
 
     <li>
-      Interviewing Veterans to understand what their mobile experience needs are
+      Interviewing veterans to understand what their mobile experience needs are
     </li>
 
     <li>
