--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 title_tag: Veterans Affairs
-title: Strategizing a better mobile user experience for Vets
+title: Strategizing a better mobile user experience for veterans
 permalink: /work/va-mobile-product-strategy/
 image: /img/projects/va_mobile_product_strategy/va-flagship-mobile-app.png
-image_description: Illustration of a Veteran using a VA flagship mobile app.
+image_description: Illustration of a veteran using a VA flagship mobile app.
 feature_image:
 feature_image_description:
 order: 20
