--- a/_projects/va_api_landscape_analysis.html
+++ b/_projects/va_api_landscape_analysis.html
@@ -10,7 +10,7 @@ feature_image_description:
 order: 85
 display: true
 tags: [microconsulting, api microconsulting, kin lane, chris cairns, robert read]
-excerpt: Giving the Veterans Affairs insight into which of their vast collection of public datasets would be most valuable to the Veteran community in the form of APIs.
+excerpt: Giving the Veterans Affairs insight into which of their vast collection of public datasets would be most valuable to the veteran community in the form of APIs.
 project_members:
   - kin-lane
   - chris-cairns
@@ -43,14 +43,14 @@ source_code_url: https://github.com/skylight-hq/va-api-landscape
     developing a near-term roadmap of APIs to deliver. So we provided an
     analysis of the VA's millions of public datasets and recommended which
     of these resources would be good candidates for turning into APIs, based
-    on potential value to the Veteran community.
+    on potential value to the veteran community.
   </p>
 {% endcapture %}
 
 {% capture challenge %}
   <p>
     The VA has produced millions of public datasets over the
-    years in support of the Veteran community. These resources tell a story
+    years in support of the veteran community. These resources tell a story
     about how much demand there is for accessing them. The VA's API Platform
     Management team needed that insight in order to help formulate a near-term
     roadmap of valuable APIs to deliver.
