--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -4,7 +4,7 @@ title_tag: Veterans Affairs
 title: Creating a knowledge platform for improving healthcare
 permalink: /work/va-diffusion-marketplace/
 image: /img/projects/va_diffusion_marketplace/diffusion-marketplace-healthcare.png
-image_description: Illustration of Veteran healthcare practices spreading across the U.S.
+image_description: Illustration of veteran healthcare practices spreading across the U.S.
 feature_image:
 feature_image_description:
 order: 5
