--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title_tag: Veterans Affairs
-title: Strategizing a better mobile user experience for veterans
+title: Strategizing a better mobile user experience for vets
 permalink: /work/va-mobile-product-strategy/
 image: /img/projects/va_mobile_product_strategy/va-flagship-mobile-app.png
 image_description: Illustration of a veteran using a VA flagship mobile app.
