--- a/_projects/dol_legacy_system_modernization.html
+++ b/_projects/dol_legacy_system_modernization.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: Department of Labor
 title: De-risking a legacy system modernization
 permalink: /work/dol-legacy-system-modernization/
-image: /img/projects/dol_legacy_system_modernization/old-mainframe.png
-image_description: Illustration of an old mainframe system.
+image: /img/projects/dol_legacy_system_modernization/legacy-system-modernization.svg
+image_description: Illustration of someone operating a conveyor belt that's transforming old computers into modern tablets.
 feature_image:
 feature_image_description:
 order: 80
