Remove hubzone text

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@ title: Home
       <h1 class="hidden-xs-down">We make government <br> work in a digital world</h1>
 
       <p class="hidden-sm-up">
-        Skylight is a <em>HUBZone</em> digital consultancy, using design, technology,
+        Skylight is a digital consultancy, using design, technology,
         and procurement to enable government success in the digital age.
       </p>
 
       <p class="hidden-xs-down">
-        Skylight is a <em>HUBZone</em> digital consultancy, using design, technology,
+        Skylight is a digital consultancy, using design, technology,
         <br> and procurement to enable government success in the digital age.
       </p>
 
