--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ title: Home
             depend on government services to fulfill their needs. But too often these
             services are delivered using outmoded policies, practices, and technologies.
             We're public servants at heart who are driven to make these services work
-            better in a digital world.
+            better in the internet era.
           </p>
         </div>
       </div>
@@ -112,7 +112,7 @@ title: Home
           <h3>Strengthening your culture through ours</h3>
           <p>
             Culture change is at the heart of achieving digital mastery.
-            From open-sourcing our assets to hiring first-rate digital talent
+            From openly sharing our knowledge to hiring first-rate talent
             to treating every interaction as a teaching opportunity,
             our culture is designed to empower you to succeed in the digital age.
           </p>
