--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -116,7 +116,7 @@ source_code_url:
 
     <li>
       Defined an MVP roadmap that included nearly 30 key user actions or features
-      (e.g., biometric login, prescription refill, and claims status) and which of
+      (for example, biometric login, prescription refill, and claims status) and which of
       these should be delivered natively or via the mobile web
     </li>
 
