--- a/_projects/everify_modernization.html
+++ b/_projects/everify_modernization.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: U.S. Citizenship and Immigration Services
 title: Modernizing employment eligibility verification
 permalink: /work/uscis-everify-modernization/
-image: /img/projects/uscis_everify_modernization/everify.png
-image_description: Illustration of an abstract checkmark, signifying verification.
+image: /img/projects/uscis_everify_modernization/employment-eligibility.svg
+image_description: A person using a punchcard to enter work.
 feature_image:
 feature_image_description:
 order: 7
