--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -4,7 +4,7 @@ title_tag: Transportation Security Administration
 title: Jumpstarting cloud adoption
 permalink: /work/tsa-cloud-adoption/
 image: /img/projects/tsa_cloud_adoption/cloud-jumpstarter.svg
-image_description: Illustration of an engineer using jumper cables on a cloud.
+image_description: An engineer using jumper cables on a cloud.
 feature_image:
 feature_image_description:
 order: 70
