--- a/_projects/us_navy_protosketching.html
+++ b/_projects/us_navy_protosketching.html
@@ -4,7 +4,7 @@ title_tag: U.S. Navy
 title: Better decisions through protosketching
 permalink: /work/us-navy-protosketching/
 image: /img/projects/us_navy_protosketching/protosketching.png
-image_description: Illustration of a website being prototyped on a laptop.
+image_description: A website being prototyped on a laptop.
 feature_image:
 feature_image_description:
 order: 120
