--- a/_projects/va_api_governance_research.html
+++ b/_projects/va_api_governance_research.html
@@ -4,7 +4,7 @@ title_tag: Veterans Affairs
 title: Managing APIs successfully at scale
 permalink: /work/va-api-governance-research/
 image: /img/projects/va_api_governance_research/api-governance.png
-image_description: Illustration conveying the concept of API governance.
+image_description: An API governance concept.
 feature_image:
 feature_image_description:
 order: 75
