--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: Veterans Affairs
 title: Creating a knowledge platform for improving healthcare
 permalink: /work/va-diffusion-marketplace/
-image: /img/projects/va_diffusion_marketplace/diffusion-marketplace-healthcare.png
-image_description: Illustration of veteran healthcare practices spreading across the U.S.
+image: /img/projects/va_diffusion_marketplace/diffusion-marketplace.svg
+image_description: Doctors, administrators, and veteran patients interacting through digital panes.
 feature_image:
 feature_image_description:
 order: 5
