--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -4,7 +4,7 @@ title_tag: Veterans Affairs
 title: Strategizing a better mobile user experience for vets
 permalink: /work/va-mobile-product-strategy/
 image: /img/projects/va_mobile_product_strategy/va-flagship-mobile-app.png
-image_description: Illustration of a veteran using a VA flagship mobile app.
+image_description: A veteran using a VA flagship mobile app.
 feature_image:
 feature_image_description:
 order: 20
