--- a/_projects/adopta_agency.html
+++ b/_projects/adopta_agency.html
@@ -4,7 +4,7 @@ title_tag: Adopta.Agency
 title: Making public datasets more accessible
 permalink: /work/adopta-agency/
 image: /img/projects/adopta-agency/adopta-agency.png
-image_description: Illustration of a government building enclosed within API computing symbols.
+image_description: A government building enclosed within API computing symbols.
 feature_image:
 feature_image_description:
 order: 160
