--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -4,7 +4,7 @@ title_tag: Agile Acquisition Framework
 title: Making government procurements agile
 permalink: /work/agile-acquisition-framework/
 image: /img/projects/agile_acquisition_framework/agile-acquisition-framework.svg
-image_description: Illustration of a Venn diagram showing the intersection between acquisition and agile.
+image_description: A Venn diagram showing the intersection between acquisition and agile.
 feature_image:
 feature_image_description:
 order: 50
