--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -4,7 +4,7 @@ title_tag: Digital Acquisition Accelerator
 title: Developing more digital acquisition professionals
 permalink: /work/digital-acquisition-accelerator/
 image: /img/projects/digital_acquisition_accelerator/speedometer.png
-image_description: Illustration of a speedometer.
+image_description: A speedometer.
 feature_image:
 feature_image_description:
 order: 150
