--- a/_projects/ssa_agile_microsprints.html
+++ b/_projects/ssa_agile_microsprints.html
@@ -4,7 +4,7 @@ title_tag: Social Security Administration
 title: Accelerating agile adoption
 permalink: /work/ssa-agile-microsprints/
 image: /img/projects/ssa_agile_microsprints/agile-board.svg
-image_description: Illustration of two people interacting with cards on an agile board.
+image_description: Two people interacting with cards on an agile board.
 feature_image:
 feature_image_description:
 order: 100
