--- a/_projects/va_api_developer_outreach.html
+++ b/_projects/va_api_developer_outreach.html
@@ -4,7 +4,7 @@ title_tag: Veterans Affairs
 title: Expanding the adoption of APIs
 permalink: /work/va-api-developer-outreach/
 image: /img/projects/va_api_developer_outreach/api-developer-outreach.png
-image_description: Illustration of a megaphone enclosed within API computing symbols.
+image_description: A megaphone enclosed within API computing symbols.
 feature_image:
 feature_image_description:
 order: 90
