--- a/_projects/va_api_landscape_analysis.html
+++ b/_projects/va_api_landscape_analysis.html
@@ -4,7 +4,7 @@ title_tag: Veterans Affairs
 title: Identifying valuable datasets for turning into APIs
 permalink: /work/va-api-landscape-analysis/
 image: /img/projects/va_api_landscape_analysis/api-magnifier.png
-image_description: Illustration of a software spider searching for APIs.
+image_description: A software spider searching for APIs.
 feature_image:
 feature_image_description:
 order: 85
