--- a/_projects/va_api_scorecard_mvp.html
+++ b/_projects/va_api_scorecard_mvp.html
@@ -4,7 +4,7 @@ title_tag: Veterans Affairs
 title: Creating a tool for governing APIs
 permalink: /work/va-api-scorecard-mvp/
 image: /img/projects/va_api_scorecard_mvp/api-scorecard.svg
-image_description: Illustration of a scorecard for APIs.
+image_description: A scorecard for APIs.
 feature_image: /img/projects/va_api_scorecard_mvp/va-api-scorecard-screenshot.png
 feature_image_description: Product screenshot of the VA API Scorecard.
 feature_image_shadow: true
