--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ title: Home
       <div class="landing-content-secondary-col">
         <p>
           Succeeding in today's digital age requires engaging with
-          teams who truly understand digital within the context of government.
+          teams who understand both digital and government.
           We're designed from the bottom-up to help you achieve digital mastery.
         </p>
       </div>
