Add new home page images

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ title: Home
 
       <div class="landing-info-img-col">
         <div class="landing-info-img">
-          <img src="img/about-infographic.png" alt="Illustration of a government building, encircled by icons that represent important government functions.">
+          <img src="img/about-infographic.svg" alt="Illustration of a government building, encircled by icons that represent important government functions.">
         </div>
       </div>
     </section>
@@ -81,7 +81,7 @@ title: Home
 
       <div class="landing-info-img-col flex-lg-first">
         <div class="landing-info-img">
-          <img src="img/services-infographic.png" alt="Illustration of a government building in a computer browser with a green checkmark, surrounded by icons that represent different service functions.">
+          <img src="img/services-infographic.svg" alt="Illustration of a government building in a computer browser with a green checkmark, surrounded by icons that represent different service functions.">
         </div>
       </div>
     </section>
@@ -101,7 +101,7 @@ title: Home
 
       <div class="landing-info-img-col">
         <div class="landing-info-img">
-          <img src="img/experience-infographic.png" alt="Illustration of a technology maze with an arrow representing how to navigate the complexity.">
+          <img src="img/experience-infographic.svg" alt="Illustration of a technology maze with an arrow representing how to navigate the complexity.">
         </div>
       </div>
     </section>
@@ -121,7 +121,7 @@ title: Home
 
       <div class="landing-info-img-col flex-lg-first">
         <div class="landing-info-img">
-          <img src="img/culture-infographic.png" alt="Illustration of various government workers with gears and light bulbs in the background.">
+          <img src="img/culture-infographic.svg" alt="Illustration of various government workers with gears and light bulbs in the background.">
         </div>
       </div>
     </section>
