--- a/pages/about.html
+++ b/pages/about.html
@@ -157,7 +157,7 @@ permalink: /about/
           <p>
             Feel free to reach out directly to one of our leaders &mdash;
             <a href="mailto:chris@skylight.digital">Chris Cairns</a>
-            or <a href="mailto:marvo@skylight.digital">Marvo Dolor</a>.
+            or <a href="mailto:josh@skylight.digital">Josh Dorothy</a>.
           </p>
 
           <p>
