--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@ title: Home
       <h1 class="hidden-xs-down">We make government <br> work in a digital world</h1>
 
       <p class="hidden-sm-up">
-        Skylight is a digital consultancy, using design, technology,
-        and procurement to enable government success in the digital age.
+        Skylight is a digital consultancy using design and technology
+        to help agencies deliver better public services.
       </p>
 
       <p class="hidden-xs-down">
-        Skylight is a digital consultancy, using design, technology,
-        <br> and procurement to enable government success in the digital age.
+        Skylight is a digital consultancy using design and technology
+        <br> to help agencies deliver better public services.
       </p>
 
       <a class="btn btn-warning btn-lg text-dark" href="/hire-us/" role="button">
