Update careers page and remove JS

--- a/pages/careers.html
+++ b/pages/careers.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Join Us
-permalink: /join/
+title: Careers
+permalink: /careers/
 ---
 
 <header class="page-header-1">
@@ -18,9 +18,7 @@ permalink: /join/
 </header>
 
 <div class="join-us">
-
   <div class="row">
-
     <section class="join-content-col">
       <div id="join">
         <h2>Join the team</h2>
