Update fonts and add scrollspy

--- a/pages/careers.html
+++ b/pages/careers.html
@@ -28,21 +28,21 @@ permalink: /careers/
   <div class="row">
     <div class="sidenav col-12 col-md-3 mt-5 d-none d-md-block">
       <div class="is-sticky">
-        <nav class="subnav-col px-0">
+        <nav class="subnav-col px-0" id="sidenav">
           <ul role="presentation">
             <li class="current">
-              <a href="#why-skylight" aria-current="location">Why Skylight?</a>
+              <a class="nav-link" href="#why-skylight" aria-current="location">Why Skylight?</a>
             </li>
-            <li><a href="#care-package">Care package</a></li>
-            <li><a href="#open-positions">Open positions</a></li>
-            <li><a href="#interview-process">Interview process</a></li>
+            <li><a class="nav-link" href="#care-package">Care package</a></li>
+            <li><a class="nav-link" href="#open-positions">Open positions</a></li>
+            <li><a class="nav-link" href="#interview-process">Interview process</a></li>
           </ul>
         </nav>
       </div>
     </div>
     <section class="col-12 col-md-9">
       <div class="mt-5" id="join">
-        <h2 class="mt-0">Why Skylight?</h2>
+        <h2 class="mt-0" id="why-skylight">Why Skylight?</h2>
         <h3>Our mission matters</h3>
         <p>We’re more than a company. We represent a movement to reinvent how the government serves families, patients, veterans, immigrants, and many others in today’s digital world. Everything about us -- our structure, culture, services, work, thoughts, and team -- is designed with that purpose in mind.</p>
 
@@ -52,55 +52,88 @@ permalink: /careers/
         <h3>We’re just getting started</h3>
         <p>We’re still in startup mode, and the future is looking bright. We’re doing impactful work, building an amazing team, growing quickly, and improving every day. Everyone is given the opportunity to shape the company in some way. We’d love for you to join us in creating something special.</p>
 
-        <img class="" src="#" alt="">
-        <p class="quote-text font-size-large">“For great people in the fields of design, engineering, data science, product management, and more to join us in a movement to make.”</p>
-        <p class="text-intro"><i><b>Name,</b> Title of role</i></p>
+        <div class="image-list row">
+          <div class="col-sm-4 col-lg-3">
+            <img src="{{ site.baseurl }}/img/people/lesley-evans.jpg" alt="Lesley Evans">
+          </div>
+          <div class="col-sm-8 col-lg-9">
+            <p class="quote-text font-size-large">“For great people in the fields of design, engineering, data science, product management, and more to join us in a movement to make.”</p>
+            <p class="text-intro"><i><b>Name,</b> Title of role</i></p>
+          </div>
+        </div>
+        <div class="image-list row">
+          <div class="col-sm-4 col-lg-3">
+            <img src="{{ site.baseurl }}/img/people/lesley-evans.jpg" alt="Lesley Evans">
+          </div>
+          <div class="col-sm-8 col-lg-9">
+            <p class="quote-text font-size-large">“For great people in the fields of design, engineering, data science, product management, and more to join us in a movement to make.”</p>
+            <p class="text-intro"><i><b>Name,</b> Title of role</i></p>
+          </div>
+        </div>
+        <div class="image-list row">
+          <div class="col-sm-4 col-lg-3">
+            <img src="{{ site.baseurl }}/img/people/lesley-evans.jpg" alt="Lesley Evans">
+          </div>
+          <div class="col-sm-8 col-lg-9">
+            <p class="quote-text font-size-large">“For great people in the fields of design, engineering, data science, product management, and more to join us in a movement to make.”</p>
+            <p class="text-intro"><i><b>Name,</b> Title of role</i></p>
+          </div>
+        </div>
 
-        <h2>Care package</h2>
+        <h2 id="care-package">Care package</h2>
         <p class="text-intro">We hire good people and support them with the best compensation and benefits possible. We keep an open dialog with everyone on the team to make what we offer even better.</p>
 
         <div class="text-grid row">
           <div class="col-12 col-lg-4">
+            <div class="care-square"></div>
             <h3>Compensation</h3>
             <p>We value you and your contributions. We offer a competitive salary, a stake in the company’s success, performance bonuses, referral bonuses, thought leadership bonuses (for example, blog posts), a quick-pay program, and HUBZone resident incentives (for example, a monthly housing stipend).</p>
           </div>
 
           <div class="col-12 col-lg-4">
+            <div class="care-square"></div>
             <h3>Future</h3>
             <p>We want to see you grow. We match your 401(k) at 10% of your salary. We also offer an accrued budget of up to $2,000 per year for professional development, which includes conferences, training, travel, and materials.</p>
           </div>
 
           <div class="col-12 col-lg-4">
+            <div class="care-square"></div>
             <h3>Health</h3>
             <p>You and your family’s health are important to us. We cover 90% of your medical premium, 100% premiums for vision and dental, and 50% premiums for dependents. We also provide life insurance, short- and long-term disability insurance, AD&D insurance, healthcare and dependent care flexible spending accounts, and health savings account.</p>
           </div>
 
           <div class="col-12 col-lg-4">
+            <div class="care-square"></div>
             <h3>Parental leave</h3>
             <p>Some moments you can never get back. We offer a minimum of X weeks paid off for all eligible new birth, adoption, or foster parents.</p>
           </div>
 
           <div class="col-12 col-lg-4">
+            <div class="care-square"></div>
             <h3>Time off</h3>
             <p>We want you to enjoy life outside of work. We offer an unlimited paid time-off policy, which covers any type of leave (such as sick and vacation) that you need or want to take.</p>
           </div>
 
           <div class="col-12 col-lg-4">
+            <div class="care-square"></div>
             <h3>Flexibility</h3>
             <p>We trust you. We give you maximum flexibility to decide when, where, and how to get your work done. We're a distributed and remote-friendly team, currently spread out across 17 different states. How do we make that work? Check out this guide.</p>
           </div>
 
           <div class="col-12 col-lg-4">
+            <div class="care-square"></div>
             <h3>Tools</h3>
             <p>Good work requires good tools. We provide an annual budget of up to $750 for anything, such as a new computer, that you think will help to do your job better. Most software that you need will be provided by us.</p>
           </div>
 
           <div class="col-12 col-lg-4">
+            <div class="care-square"></div>
             <h3>Code of conduct</h3>
             <p>Everyone deserves a safe, inclusive environment. We live by our Code of Conduct, and actively look for ways to make it even stronger, as well as reinforce expected behaviors.</p>
           </div>
 
           <div class="col-12 col-lg-4">
+            <div class="care-square"></div>
             <h3>Community</h3>
             <p>Amplify your impact. We give you pathways to engage with a growing community of organizations and individuals working to change how the government works, such as the Digital Services Coalition, which we co-founded.</p>
           </div>
@@ -110,7 +143,7 @@ permalink: /careers/
       </div>
 
       <div id="interviewing">
-        <h2>Interview process</h2>
+        <h2 id="interview-process">Interview process</h2>
         <p class="text-intro">If you apply for a position, here’s what you can expect in terms of the process:</p>
 
         <h3>1. Application review</h3>
