Update font sizes

--- a/pages/careers.html
+++ b/pages/careers.html
@@ -58,7 +58,7 @@ permalink: /careers/
           </div>
           <div class="col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">“For great people in the fields of design, engineering, data science, product management, and more to join us in a movement to make.”</p>
-            <p class="text-intro"><i><b>Name,</b> Title of role</i></p>
+            <p class=""><i><b>Name,</b> Title of role</i></p>
           </div>
         </div>
         <div class="image-list row">
@@ -67,7 +67,7 @@ permalink: /careers/
           </div>
           <div class="col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">“For great people in the fields of design, engineering, data science, product management, and more to join us in a movement to make.”</p>
-            <p class="text-intro"><i><b>Name,</b> Title of role</i></p>
+            <p class=""><i><b>Name,</b> Title of role</i></p>
           </div>
         </div>
         <div class="image-list row">
@@ -76,7 +76,7 @@ permalink: /careers/
           </div>
           <div class="col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">“For great people in the fields of design, engineering, data science, product management, and more to join us in a movement to make.”</p>
-            <p class="text-intro"><i><b>Name,</b> Title of role</i></p>
+            <p class=""><i><b>Name,</b> Title of role</i></p>
           </div>
         </div>
 
