--- a/pages/careers.html
+++ b/pages/careers.html
@@ -44,7 +44,7 @@ permalink: /careers/
       <div class="mt-5" id="join">
         <h2 class="mt-0" id="why-skylight">Why Skylight?</h2>
         <h3>Our mission matters</h3>
-        <p>We’re more than a company. We represent a movement to reinvent how the government serves families, patients, veterans, immigrants, and many others in today’s digital world. Everything about us -- our structure, culture, services, work, thoughts, and team -- is designed with that purpose in mind.</p>
+        <p>We’re more than a company. We represent a movement to reinvent how the government serves families, patients, veterans, immigrants, and many others in today’s digital world. Everything about us — our structure, culture, services, work, thoughts, and team — is designed with that purpose in mind.</p>
 
         <h3>You matter</h3>
         <p>No crafty policy or flashy tech is going to change the way government works. It’s people like you, with talents in research, design, product, engineering, data, and more, who are given a chance to make a difference. We’ve created an environment that empowers you to unleash your skills for public good, whether that’s improving early childhood outcomes or helping to save veteran lives. You’ll work alongside a team of extraordinarily-talented people who strive to bring out the best in you and each other. You’ll also be taken care of with a well-thought-out compensation and benefits package. We want you to be happy, fulfilled, and well-supported.</p>
