Remove unneeded flex code

--- a/pages/careers.html
+++ b/pages/careers.html
@@ -71,7 +71,7 @@ permalink: /careers/
 
         <div class="text-grid row">
           <div class="col-12 col-lg-4">
-            <div class="care-square d-flex flex-row flex-column align-items-center justify-content-center rounded-circle">
+            <div class="care-square d-flex align-items-center justify-content-center rounded-circle">
               <i class="fas fa-piggy-bank text-white"></i>
             </div>
             <h3>Compensation</h3>
