Encapsulate text better

--- a/pages/careers.html
+++ b/pages/careers.html
@@ -5,7 +5,7 @@ permalink: /careers/
 ---
 
 <div class="hero">
-  <div class="hero-container container-fluid text-center">
+  <div class="hero-container container-fluid text-center page--careers__text">
     <h1 class="hero-heading">{{ page.title }}</h1>
     <p class="hero-content">Help us change the way government works.</p>
   </div>
@@ -27,7 +27,7 @@ permalink: /careers/
         </nav>
       </div>
     </div>
-    <section class="col-12 col-md-9">
+    <section class="col-12 col-md-9 page--careers__text">
       <div class="mt-5 text" id="join">
         <h2 class="mt-0" id="why-skylight">Why Skylight?</h2>
         <h3>Our mission matters</h3>
@@ -69,7 +69,7 @@ permalink: /careers/
         <h2 id="care-package">Care package</h2>
         <p class="text-intro">We hire good people and support them with the best compensation and benefits possible. We keep an open dialog with everyone on the team to make what we offer even better.</p>
 
-        <div class="text-grid row">
+        <div class="text-grid row section__care-package">
           <div class="col-12 col-lg-4">
             {% include icons/careers/Compensation.svg %}
             <h3>Compensation</h3>
