--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -4,8 +4,8 @@ title_tag: Carrot
 title: Building a communication application for leaders
 permalink: /work/carrot/
 redirect_from: /work/opencompany/
-image: /img/projects/carrot/carrot.png
-image_description: The icon logo of Carrot.
+image: /img/projects/carrot/carrot.svg
+image_description: Multiple people together reading a page out of a huge newsletter.
 feature_image: /img/projects/carrot/carrot-demo-page.png
 feature_image_description: Product screenshot of a demo page of the streams functionality.
 order: 10
