--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -3,8 +3,8 @@ layout: default
 title_tag: TalkTo
 title: Developing a consumer-to-business messaging service
 permalink: /work/talkto/
-image: /img/projects/talkto/talkto.png
-image_description: The logo of TalkTo.
+image: /img/projects/talkto/talkto.svg
+image_description: A person texting with a shopekeeper.
 feature_image: /img/projects/talkto/talkto-demo-page.png
 feature_image_description: Product screenshot of a demo page of the messaging functionality.
 feature_image_shadow: true
