--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -4,13 +4,13 @@ title_tag: Agile Delivery Services Marketplace
 title: Streamlining how agencies procure software
 permalink: /work/agile-delivery-services-marketplace/
 image: /img/projects/agile_delivery_services_marketplace/agile-delivery-services-marketplace.svg
-image_description: Abstract representation of a marketplace of agile vendors.
+image_description: A person selecting a digitized-looking package for purchase from a store shelf.
 feature_image:
 feature_image_description:
 order: 60
 display: true
 tags: [digital procurement, chris cairns, robert read]
-excerpt: A group of pre-vetted vendors ready to help government agencies use agile practices to build digital services.
+excerpt: A group of pre-vetted vendors who helped government agencies use agile practices to build digital services.
 project_members:
   - chris-cairns
   - robert-read
@@ -58,8 +58,8 @@ source_code_url:
 
 {% capture summary %}
   <p>
-    The Agile Delivery Services Marketplace is a federal-wide, pre-vetted pool of
-    vendors who can help agencies use modern agile software development practices
+    The Agile Delivery Services Marketplace was a federal-wide, pre-vetted pool of
+    vendors who helped agencies use modern agile software development practices
     to build digital services.
   </p>
 {% endcapture %}
@@ -80,7 +80,7 @@ source_code_url:
   <p>
     To address these challenges, Chris Cairns, Robert Read, and other team members
     within the General Services Administration created the first-ever, federal-wide
-    contract vehicle of vendors who specialize in agile delivery services (for example,
+    contract vehicle of vendors who specialized in agile delivery services (for example,
     user-centered design, agile software development, and DevOps) using several groundbreaking
     approaches:
   </p>
@@ -141,7 +141,7 @@ source_code_url:
     </li>
 
     <li>
-      Used by nearly a dozen federal agencies who are experiencing improved contractual
+      Used by nearly a dozen federal agencies who experienced improved contractual
       outcomes
     </li>
   </ul>
