--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -89,7 +89,11 @@ source_code_url: https://github.com/open-company
     </li>
 
     <li>
-      Successfully released of a beta version of the application
+      Successfully released beta and production versions of the application
+    </li>
+
+    <li>
+      Steadily growing the user base
     </li>
   </ul>
 {% endcapture %}
