update carrot case study

--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -20,6 +20,8 @@ technologies:
   - WebSockets
   - Clojure
   - APIs
+  - iOS SDK
+  - Android SDK
   - Microservices
   - RethinkDB
   - Amazon Web Services
@@ -31,12 +33,13 @@ practices:
   - User growth marketing
   - Responsive web design
   - Agile development
-  - DevOps
+  - DevSecOps
   - API-first development
   - RESTful, HATEOAS API architecture
   - Microservices architecture
   - Third-party integration
   - Open-source development
+  - Web and native apps
   - Cloud hosting
 news_posts:
   - title: Who Are The Biggest Disruptors of 2019? The Answer May Surprise You
