update case studies

--- a/_projects/everify_modernization.html
+++ b/_projects/everify_modernization.html
@@ -41,8 +41,7 @@ practices:
   - RESTful / SOAP API architecture
   - Legacy reengineering / strangler pattern
   - Data engineering
-  - DevOps
-  - Security
+  - DevSecOps
   - Containerization
   - Cloud hosting
   - Automated documentation
