--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -33,7 +33,7 @@ practices:
   - User growth marketing
   - Mobile-first design
   - Agile development
-  - DevOps
+  - DevSecOps
   - API-first development
   - RESTful API architecture
   - Web and native apps
