--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -6,8 +6,8 @@ permalink: /work/carrot/
 redirect_from: /work/opencompany/
 image: /img/projects/carrot/carrot.svg
 image_description: Multiple people together reading a page out of a huge newsletter.
-feature_image: /img/projects/carrot/carrot-demo-page.png
-feature_image_description: Product screenshot of a demo page of the streams functionality.
+feature_image:
+feature_image_description:
 order: 10
 display: true
 tags: [digital services delivery, sean johnson]
