--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -3,7 +3,7 @@ layout: default
 title_tag: Veterans Affairs
 title: Strategizing a better mobile user experience for vets
 permalink: /work/va-mobile-product-strategy/
-image: /img/projects/va_mobile_product_strategy/va-flagship-mobile-app.png
+image: /img/projects/va_mobile_product_strategy/va-flagship-mobile-app.svg
 image_description: A veteran using a VA flagship mobile app.
 feature_image:
 feature_image_description:
