--- a/_projects/va_api_scorecard_mvp.html
+++ b/_projects/va_api_scorecard_mvp.html
@@ -5,9 +5,9 @@ title: Creating a tool for governing APIs
 permalink: /work/va-api-scorecard-mvp/
 image: /img/projects/va_api_scorecard_mvp/api-scorecard.svg
 image_description: People working around a scorecard for APIs.
-feature_image: /img/projects/va_api_scorecard_mvp/va-api-scorecard-screenshot.png
-feature_image_description: Product screenshot of the VA API Scorecard.
-feature_image_shadow: true
+feature_image:
+feature_image_description:
+feature_image_shadow:
 order: 40
 display: true
 tags: [microconsulting, api microconsulting, victor zapanta, nick bristow, kin lane, robert read, chris cairns]
