--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -5,9 +5,9 @@ title: Developing a consumer-to-business messaging service
 permalink: /work/talkto/
 image: /img/projects/talkto/talkto.svg
 image_description: A person texting with a shopekeeper.
-feature_image: /img/projects/talkto/talkto-demo-page.png
-feature_image_description: Product screenshot of a demo page of the messaging functionality.
-feature_image_shadow: true
+feature_image:
+feature_image_description:
+feature_image_shadow:
 order: 30
 display: true
 tags: [digital services delivery, sean johnson]
