Update main navigation and add redirects

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,10 @@
 ---
 layout: default
-title: Hire Us
-permalink: /hire-us/
+title: Contact
+permalink: /contact/
+redirect_from:
+  - /hire-us/
+  - /alliances/
 ---
 
 {% include page_header.html
