update carrot case study

--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -46,6 +46,8 @@ news_posts:
     url: https://www.inc.com/jonathan-steiman/five-innovative-startups-to-watch-in-2019.html
   - title: Carrot - Leadership communication for growing and distributed teams
     url: https://www.producthunt.com/posts/carrot-3c283ae5-337a-409b-b48f-72f15dbcc454
+  - title: The best digital products 2019
+  - url: https://www.notion.so/The-best-digital-products-2019-177f19f9f8e448ffa4e605089a071935
 project_url: https://carrot.io/
 project_cta: See the site
 source_code_url: https://github.com/open-company
