Change About page to Team

--- a/pages/team.html
+++ b/pages/team.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: About Us
-permalink: /about/
+title: Team
+permalink: /team/
+redirect_from: /about/
 ---
 
 {% include page_header.html
