--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title_tag: Carrot
-title: Building a communication application for leaders
+title: Building a communication application for remote teams
 permalink: /work/carrot/
 redirect_from: /work/opencompany/
 image: /img/projects/carrot/carrot.svg
@@ -11,7 +11,7 @@ feature_image_description:
 order: 10
 display: true
 tags: [digital services delivery, sean johnson]
-excerpt: A "non-chat" communication solution for leaders struggling to keep everyone focused on what matters most.
+excerpt: An asynchronous communications solution for remote teams struggling to maintain focus on what matters most.
 project_members:
   - sean-johnson
 technologies:
@@ -47,7 +47,7 @@ news_posts:
   - title: Carrot - Leadership communication for growing and distributed teams
     url: https://www.producthunt.com/posts/carrot-3c283ae5-337a-409b-b48f-72f15dbcc454
   - title: The best digital products 2019
-  - url: https://www.notion.so/The-best-digital-products-2019-177f19f9f8e448ffa4e605089a071935
+    url: https://www.notion.so/The-best-digital-products-2019-177f19f9f8e448ffa4e605089a071935
 project_url: https://carrot.io/
 project_cta: See the site
 source_code_url: https://github.com/open-company
@@ -55,38 +55,37 @@ source_code_url: https://github.com/open-company
 
 {% capture summary %}
   <p>
-    Carrot is a leadership communication application that helps leaders rise above
-    the noise of chat and email to keep teams alinged around what matters most.
+    Carrot is an asynchronous communication application that reduces the noise of chat and
+    email so distributed teams can stay focused and informed with fewer interruptions.
   </p>
 {% endcapture %}
 
 {% capture challenge %}
   <p>
-    In the age of Slack and fast-moving conversations, the lack of
-    focus and clarity have become a huge problem in the workplace.
-    Email and chat apps keep everyone connected throughout the day, yet
-    it's become even more difficult for teams to stay aligned around
-    what's most important. The problem is that leadership is getting lost
-    in all the noise.
+    In the age of Slack and fast-moving chat conversations, the lack of focus
+    and clarity is a huge problem in the workplace. Chat apps keep everyone
+    connected throughout the day, yet it's more difficult for teams to stay
+    aligned around the big picture of what's most important. The problem is
+    the leadership signal is getting lost in all the noise.
   </p>
 {% endcapture %}
 
 {% capture solution %}
   <p>
-    To address this problem, Sean Johnson led the product development of a
-    "non-chat" communication application for leaders called Carrot. Powered by
-    the open source <a href="https://github.com/open-company">OpenCompany</a>
-    platform, Carrot is designed to be as delightful and interactive as chat,
-    but asynchronous so people can get caught up on their own time. This enables
-    leaders to keep everyone focused on what matters most in order to build
-    transparency, trust, and stronger teams.
+    To address this problem, Sean Johnson led the product development of Carrot,
+    an asynchronous communication application for better team discussions.
+    Realized as the open source <a href="https://github.com/open-company">OpenCompany</a>
+    platform, Carrot is designed to be as delightful and interactive as chat, but
+    asynchronous so people can get caught up on their own time. This enables leaders
+    to keep everyone focused on what matters most to build transparency, trust, and
+    stronger distributed teams.
   </p>
 {% endcapture %}
 
 {% capture results %}
   <ul>
     <li>
-      Created a minimum viable product
+      Initially created a minimum viable product
     </li>
 
     <li>
@@ -94,7 +93,7 @@ source_code_url: https://github.com/open-company
     </li>
 
     <li>
-      Successfully released beta and production versions of the application
+      Iterated production versions of the application with constant user feedback
     </li>
 
     <li>
