--- a/_projects/carrot.html
+++ b/_projects/carrot.html
@@ -11,7 +11,7 @@ feature_image_description:
 order: 10
 display: true
 tags: [digital services delivery, sean johnson]
-excerpt: An asynchronous communications solution for remote teams struggling to maintain focus on what matters most.
+excerpt: An asynchronous communication solution for remote teams struggling to maintain focus on what matters most.
 project_members:
   - sean-johnson
 technologies:
